Threading works better

--- a/bin/makefile
+++ b/bin/makefile
@@ -5,11 +5,11 @@ EXE		 = WindowCreator
 SRC		 = ../src
 INCLUDE	 = ../include
 
-FLAGS	 = -std=c++17 -I$(INCLUDE) -L../lib
+FLAGS	 = -std=c++23 -I$(INCLUDE) -L../lib
 CXXFLAGS = -c -Wall $(FLAGS)
 LDFLAGS	 = $(FLAGS)
 
-OBJECTS	 = glad.o main.o WindowManager.o Colour.o Callbacks.o
+OBJECTS	 = glad.o main.o Window.o WindowManager.o Colour.o Callbacks.o
 
 all: $(OBJECTS)
 	$(CXX) $(LDFLAGS) $(OBJECTS) -lglfw3dll -o $(EXE)
@@ -17,10 +17,13 @@ all: $(OBJECTS)
 glad.o: $(SRC)/glad.c
 	$(CXX) $(CXXFLAGS) $<
 
-main.o: $(SRC)/main.cpp WindowManager.o Colour.o $(INCLUDE)/Defines.h
+main.o: $(SRC)/main.cpp Window.o Colour.o $(INCLUDE)/Defines.h
 	$(CXX) $(CXXFLAGS) $<
 
-WindowManager.o: $(SRC)/WindowManager.cpp $(INCLUDE)/WindowManager.h Colour.o $(INCLUDE)/Defines.h
+Window.o: $(SRC)/Window.cpp $(INCLUDE)/Window.h Colour.o $(INCLUDE)/Defines.h WindowManager.o
+	$(CXX) $(CXXFLAGS) $<
+
+WindowManager.o: $(SRC)/WindowManager.cpp $(INCLUDE)/WindowManager.h $(INCLUDE)/Defines.h
 	$(CXX) $(CXXFLAGS) $<
 
 Colour.o: $(SRC)/Colour.cpp $(INCLUDE)/Colour.h $(INCLUDE)/Defines.h
